<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mariya.calculator.MainActivity"
    tools:showIn="@layout/activity_main">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_centerInParent="true">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:layout_marginLeft="20dp"
            android:text="TextView" />

        <Button
            android:id="@+id/backspace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:text="@string/buttonBackspace" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="100dp"
        android:id="@+id/tableLayout">



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/b1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/button1" />

            <Button
                android:id="@+id/b2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/button2" />

            <Button
                android:id="@+id/b3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/button3" />

            <Button
                android:id="@+id/plus"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/buttonPlus" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/b4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button4" />

            <Button
                android:id="@+id/b5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button5" />

            <Button
                android:id="@+id/b6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button6" />

            <Button
                android:id="@+id/minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonMinus" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/b7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button7" />

            <Button
                android:id="@+id/b8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button8" />

            <Button
                android:id="@+id/b9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button9" />

            <Button
                android:id="@+id/mult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonMult" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/AC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonAC" />

            <Button
                android:id="@+id/b0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button0" />

            <Button
                android:id="@+id/eq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonEq" />

            <Button
                android:id="@+id/div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonDiv" />
        </TableRow>
    </TableLayout>

</RelativeLayout>
